--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
   "bugs": "https://github.com/brblacky/lavalink-status/issues",
   "homepage": "https://github.com/brblacky/lavalink-status#readme",
   "dependencies": {
-    "discord.js": "^14.0.3",
+    "discord.js": "^14.15.3",
     "dotenv": "^16.0.1",
-    "erela.js": "^2.3.3",
+    "erela.js": "github:Tomato6966/erela.js",
+    "i": "^0.3.7",
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2",
     "node-fetch": "^2.6.7",
+    "npm": "^10.8.2",
     "prettysize": "^2.0.0",
     "systeminformation": "^5.12.1"
   }
